--- a/app/src/main/res/layout/activity_take_quiz.xml
+++ b/app/src/main/res/layout/activity_take_quiz.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#33B68E8E"
+    android:background="@color/background"
     tools:context=".learner.TakeQuizActivity">
 
     <LinearLayout
