--- a/app/src/main/res/menu/educator_bottom_menu.xml
+++ b/app/src/main/res/menu/educator_bottom_menu.xml
@@ -20,4 +20,9 @@
         android:title="Add Learner"
         android:icon="@drawable/baseline_add_circle_24"
         app:showAsAction="ifRoom"/>
+    <item
+        android:id="@+id/add_quiz_nav"
+        android:icon="@drawable/baseline_add_circle_24"
+        android:title="Add Quiz"
+        app:showAsAction="ifRoom"/>
 </menu>
