--- a/app/src/main/res/layout/activity_view_quiz.xml
+++ b/app/src/main/res/layout/activity_view_quiz.xml
@@ -24,7 +24,6 @@
         android:id="@+id/scrollView3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,24 +39,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/urbanist"
+                android:layout_margin="15dp"
                 android:textSize="16sp" />
+
+            <Button
+                android:id="@+id/OKbutton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@android:color/black"
+                android:layout_marginBottom="20dp"
+                android:text="OK"
+                android:textColor="#ffff" />
 
         </LinearLayout>
     </ScrollView>
-
-    <Button
-        android:id="@+id/OKbutton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        android:backgroundTint="@android:color/black"
-        android:paddingBottom="0dp"
-        android:text="OK"
-        android:textColor="#ffff"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-
-        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
