--- a/app/src/main/res/layout/fragment_question_count.xml
+++ b/app/src/main/res/layout/fragment_question_count.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/frameLayout"
-    style="@style/Theme.AppCompat.Dialog"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     tools:context=".fragment.educator.QuestionCountFragment">
@@ -14,7 +13,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="10dp">
 
         <TextView
             android:id="@+id/textView3"
