--- a/app/src/main/res/layout/fragment_question_count.xml
+++ b/app/src/main/res/layout/fragment_question_count.xml
@@ -70,6 +70,28 @@
                 android:inputType="numberDecimal" />
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="89dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingStart="10dp"
+                android:paddingTop="10dp"
+                android:text="Select Course"
+                android:textAlignment="center" />
+
+            <Spinner
+                android:id="@+id/courseSpinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                />
+        </LinearLayout>
+
         <Button
             android:id="@+id/buttonOK"
             android:layout_width="match_parent"
