--- a/app/src/main/res/layout/activity_quiz_result.xml
+++ b/app/src/main/res/layout/activity_quiz_result.xml
@@ -34,14 +34,14 @@
         android:textColor="@color/white"/>
 
     <TextView
+        android:id="@+id/tv_quiz_result_quiz_score"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tv_quiz_result_quiz_score"
-        android:textSize="60dp"
-        android:textStyle="bold"
-        android:textColor="@color/white"
         android:layout_marginTop="10dp"
-        android:text="9 out of 10"/>
+        android:text="9 out of 10"
+        android:textColor="@color/white"
+        android:textSize="60dp"
+        android:textStyle="bold" />
 
     <Button
         android:layout_width="match_parent"
