Initial design for the profile activity

--- a/app/src/main/res/layout/activity_learner_main.xml
+++ b/app/src/main/res/layout/activity_learner_main.xml
@@ -20,7 +20,7 @@
             android:background="@color/white">
 
             <ImageView
-                android:id="@+id/youtube_logo"
+                android:id="@+id/education_support_logo"
                 android:layout_width="70dp"
                 android:layout_height="40dp"
                 android:adjustViewBounds="true"
