--- a/app/src/main/res/layout/educator_add_learner.xml
+++ b/app/src/main/res/layout/educator_add_learner.xml
@@ -37,7 +37,6 @@
         android:layout_marginEnd="16dp"
         android:text="Add Learner"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        app:layout_constraintBottom_toTopOf="@+id/search_view_learner_list"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -54,54 +53,94 @@
         android:inputType="textEmailAddress"
         android:minHeight="48dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/search_view_learner_list" />
+        app:layout_constraintTop_toBottomOf="@+id/addLearner" />
 
-    <androidx.appcompat.widget.SearchView
-        android:id="@+id/search_view_learner_list"
-        android:layout_width="match_parent"
+    <EditText
+        android:id="@+id/addLearnerCourseName"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
+        android:ems="10"
+        android:hint="Learner Course"
+        android:inputType="textEmailAddress"
+        android:minHeight="48dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/addLearnerEmailId" />
+
+    <!--Search view for filtering list view-->
+
+    <!--List View from which data is to be searched
+         for different programming languages-->
+
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/idSV"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
-        android:background="@drawable/search_view_bg"
-        android:textCursorDrawable="@null"
-        app:iconifiedByDefault="false"
-        app:layout_constraintBottom_toTopOf="@+id/addLearnerEmailId"
+        android:layout_marginBottom="16dp"
+        android:iconifiedByDefault="false"
+        android:padding="4dp"
+        android:queryHint="Search Programming language"
+        app:layout_constraintBottom_toTopOf="@+id/idLVProgrammingLanguages"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addLearner"
-        app:queryBackground="@null" />
+        app:layout_constraintTop_toBottomOf="@+id/addLearnerCourseName"
+        app:layout_constraintVertical_bias="0.3" />
 
-<!--    <androidx.recyclerview.widget.RecyclerView-->
-<!--        android:id="@+id/rv_learner_list_cards"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="16dp"-->
-<!--        android:layout_marginTop="16dp"-->
-<!--        android:layout_marginEnd="16dp"-->
-<!--        android:layout_marginBottom="328dp"-->
-<!--        android:nestedScrollingEnabled="false"-->
-<!--        android:overScrollMode="never"-->
-<!--        app:layout_constraintBottom_toTopOf="@+id/educator_addlearner_confirm"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/addLearnerEmailId"-->
-<!--        app:layout_constraintVertical_bias="0.0" />-->
+    <ListView
+        android:id="@+id/idLVProgrammingLanguages"
+        android:layout_width="96dp"
+        android:layout_height="277dp"
+        android:layout_below="@id/idSV"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/educator_addlearner_confirm"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.057"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/addLearnerCourseName"
+        app:layout_constraintVertical_bias="0.484" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="16dp"
+        android:background="@android:drawable/editbox_background"
+        android:drawableRight="@android:drawable/arrow_down_float"
+        android:drawablePadding="16dp"
+        android:hint="Select Language"
+        android:padding="12dp"
+        app:layout_constraintBottom_toTopOf="@+id/educator_addlearner_confirm"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/idSV" />
 
     <Button
         android:id="@+id/educator_addlearner_confirm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
         android:backgroundTint="#3CE14B"
         android:text="Confirm"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.472"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addLearnerEmailId" />
+        app:layout_constraintTop_toBottomOf="@+id/addLearnerCourseName"
+        app:layout_constraintVertical_bias="0.78" />
 
-<!--    <com.google.android.material.textfield.TextInputLayout-->
+    <!--    <com.google.android.material.textfield.TextInputLayout-->
 <!--        android:id="@+id/textInputLayoutAddNewLearner"-->
 <!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
 <!--        android:layout_width="match_parent"-->
