--- a/app/src/main/res/layout/educator_fragment_home.xml
+++ b/app/src/main/res/layout/educator_fragment_home.xml
@@ -48,17 +48,27 @@
                 android:id="@+id/educator_rv_educator_courses_list_cards"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:overScrollMode="never"
+                android:layout_marginEnd="8dp"
                 android:nestedScrollingEnabled="false"
+                android:overScrollMode="never"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/educator_tv_enrolled_courses"/>
+                app:layout_constraintTop_toBottomOf="@+id/educator_tv_enrolled_courses" />
+
+            <Button
+                android:id="@+id/buttonfetchData"
+                android:layout_width="78dp"
+                android:layout_height="41dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginBottom="24dp"
+                android:text="fetch"
+                app:layout_constraintBottom_toTopOf="@+id/educator_rv_educator_courses_list_cards"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/educator_tv_enrolled_courses"
+                app:layout_constraintTop_toBottomOf="@+id/bgImage" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
