--- a/app/src/main/res/layout/start_quiz_card.xml
+++ b/app/src/main/res/layout/start_quiz_card.xml
@@ -12,40 +12,32 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="8dp"
-        android:orientation="horizontal"
-        android:gravity="center">
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/tv_quiz_name"
-            android:layout_width="254dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Quiz-2"
             android:textColor="@android:color/black"
-            android:textSize="24dp" />
+            android:textSize="24dp"
+            android:layout_gravity="start"/>
 
         <LinearLayout
             android:id="@+id/ll_start_quiz"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_gravity="center_vertical"
-            android:gravity="end">
+            android:layout_gravity="end">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="START "
                 android:textSize="24dp"
                 android:textStyle="bold"
                 android:textColor="@color/black"
-                android:layout_gravity="center_vertical"/>
-
-            <ImageButton
-                android:layout_width="14dp"
-                android:layout_height="14dp"
-                android:src="@drawable/ic_right_arrow"
-                android:layout_gravity="center_vertical"
-                android:layout_margin="4dp"/>
+                android:gravity="end"/>
 
         </LinearLayout>
 
